--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "date-fns-tz": "^3.2.0",
     "dayjs": "^1.11.13",
     "expo": "~52.0.0",
-    "expo-location": "~16.1.0",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -37,7 +36,7 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-maps": "^1.20.1",
+    "react-native-maps": "^1.18.0",
     "react-native-maps-directions": "^1.9.0",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "3.16.1",
@@ -52,7 +51,8 @@
     "react-native-web-webview": "^1.0.2",
     "react-native-webview": "^13.8.6",
     "react-native-youtube-iframe": "^2.3.0",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "expo-location": "~18.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
